# the_rag_project

./: .gitignore  README.md  generate_corpus.py  pyproject.toml
docs/manual/: architecture.md  getting_started.md  operations.md  security.md
docs/wiki/: err_4000.md  err_4007.md  err_4014.md  err_4021.md  err_4028.md  err_4035.md  err_4042.md  err_4049.md  err_4056.md  err_4063.md  err_4070.md  err_4077.md  err_4084.md  err_4091.md  err_4098.md  err_4105.md  err_4112.md  err_4119.md  err_4126.md  err_4133.md  err_4140.md  err_4147.md  err_4154.md  err_4161.md  err_4168.md  err_4175.md  err_4182.md  err_4189.md  err_4196.md  err_4203.md  err_4210.md  err_4217.md  err_4224.md  err_4231.md  err_4238.md  err_4245.md  err_4252.md  err_4259.md  err_4266.md  err_4273.md  (+20 more)
rag/: chunking.py  parsing.py
rag/api/: main.py
rag/eval/: baseline.json  calibrate.py  depth_sweep.py  ev2_reranker.py  generation.py  harness.py  human_labels.json  judge.py  noise_band.py  queries.py  regression.py
rag/localllm/: server.py
rag/retrieval/: dense.py  filtering.py  fusion.py  lexical.py  rerank.py
tests/: test_filtering.py
