[project]
name = "hybrid-rag-retrieval-engine"
version = "0.1.0"
description = "Hybrid dense + lexical retrieval with rank-based fusion, reranking, metadata filtering, and a FastAPI service."
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "anthropic>=0.70.0",
    "faiss-cpu>=1.8.0",
    "fastapi>=0.115.0",
    "numpy>=1.26.0",
    "openai>=2.46.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
]
